修复controller的一些bug